 - (dtucker) [auth-pam.c] Since people don't seem to be getting the message
   that USE_POSIX_THREADS is unsupported, not recommended and generally a bad
   idea, it is now known as UNSUPPORTED_POSIX_THREADS_HACK.  Attempting to use
   USE_POSIX_THREADS will now generate an error so we don't silently change
   behaviour.  ok djm@

20050524
 - (djm) [openbsd-compat/readpassphrase.c] bz #950: Retry tcsetattr to ensure
   terminal modes are reset correctly. Fix from peak AT argo.troja.mff.cuni.cz;
   "looks ok" dtucker@

20050512
 - (tim) [buildpkg.sh.in] missing ${PKG_INSTALL_ROOT} in init script
   hard link section. Bug 1038.

20050509
 - (dtucker) [contrib/cygwin/ssh-host-config] Add a test and warning for a
   user-mode mounts in Cygwin installation.  Patch from vinschen at redhat.com.

20050504
 - (djm) [ssh.c] some systems return EADDRINUSE on a bind to an already-used
   unix domain socket, so catch that too; from jakob@ ok dtucker@

20050503
 - (dtucker) [canohost.c] normalise socket addresses returned by
   get_remote_hostname().  This means that IPv4 addresses in log messages
   on IPv6 enabled machines will no longer be prefixed by "::ffff:" and
   AllowUsers, DenyUsers, AllowGroups, DenyGroups will match IPv4-style
   addresses only for 4-in-6 mapped connections, regardless of whether
   or not the machine is IPv6 enabled.  ok djm@

20050425
 - (dtucker) [regress/multiplex.sh] Use "kill -0 $pid" to check for the
   existence of a process since it's more portable.  Found by jbasney at
   ncsa.uiuc.edu; ok tim@
 - (dtucker) [regress/multiplex.sh] Remove cleanup call since test-exec.sh
   will clean up anyway.  From tim@
 - (dtucker) [regress/multiplex.sh] Put control socket in /tmp so running
   "make tests" works even if you're building on a filesystem that doesn't
   support sockets.  From deengert at anl.gov, ok djm@

20050424
 - (dtucker) [INSTALL configure.ac] Make zlib version check test for 1.1.4 or
   1.2.1.2 or higher.  With tim@, ok djm@

20050423